# revyv

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
cmake/: FindZeroMQ.cmake  RevyvZeroMQ.cmake
compositor/: CMakeLists.txt
compositor/include/compositor/: types.h
compositor/src/: error.h  listener.cpp
librevyv/: CMakeLists.txt
librevyv/include/revyv/: revyv.h
librevyv/src/: capi.cpp  compressor.h  connector.cpp  connector.h
librevyv/test/: CMakeLists.txt
webbrowser/: CMakeLists.txt  README.md
webbrowser/cmake/: DownloadCEF.cmake  StageDirectory.cmake
webbrowser/mac/: Info.plist.in  helper-Info.plist.in
webbrowser/mac/English.lproj/: InfoPlist.strings  MainMenu.xib
webbrowser/src/: browser_app.cpp  browser_app.h  browser_client.cpp  browser_client.h  event_thread.cpp  event_thread.h  main.cpp  process_helper_mac.cpp  render_handler.cpp
webbrowser/tools/: fetch_cef_source.py
